tdf#96132 Enabling Experimental Features in UI doesn't warn about restart

Change-Id: I2efafee4f8ebd4cd7ba2b7a23f68ca08022eb659